Add recipe and station views
Remove unnecessary custom views
Add urls for recipe and station views
Add recipe and station views

--- a/bdo_tools/crafting/templates/crafting/main.html
+++ b/bdo_tools/crafting/templates/crafting/main.html
@@ -18,12 +18,12 @@
         <div class="col">
             <h2>Recipes</h2>
             <p>These are not yet implemented. They will eventually be all the recipes for crafting materials and other items.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">See List &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="{% url 'crafting:recipes:list' %}" role="button">See List &raquo;</a></p>
        </div>
         <div class="col">
             <h2>Stations</h2>
             <p>These are the crafting stations found in houses throughout Black Desert Online.<p>
-            <p><a class="btn btn-secondary" href="#" role="button">See List &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="{% url 'crafting:stations:list' %}" role="button">See List &raquo;</a></p>
        </div>
     </div>
 </div>
