Add territory views
Convert tables to default header style
Convert main pages to use bootstrap cards
Add fontawesome to base
Add territory views

--- a/bdo_tools/crafting/templates/crafting/main.html
+++ b/bdo_tools/crafting/templates/crafting/main.html
@@ -8,23 +8,37 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container pb-3">
     <div class="row">
-        <div class="col">
-            <h2>Materials</h2>
-            <p>These are the resources available throughout the world of Black Desert Online.</p>
-            <p><a class="btn btn-secondary" href="{% url 'crafting:materials:list' %}" role="button">See List &raquo;</a></p>
+        <div class="card-deck">
+            <div class="card">
+                <h2 class="card-header">Materials</h2>
+                <div class="card-block">
+                    <p>These are the resources available throughout the world of Black Desert Online.</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-secondary" href="{% url 'crafting:materials:list' %}" role="button">See List &raquo;</a>
+                </div>
+            </div>
+            <div class="card">
+                <h2 class="card-header">Recipes</h2>
+                <div class="card-block">
+                    <p>These are not yet implemented. They will eventually be all the recipes for crafting materials and other items.</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-secondary" href="{% url 'crafting:recipes:list' %}" role="button">See List &raquo;</a>
+                </div>
+           </div>
+            <div class="card">
+                <h2 class="card-header">Stations</h2>
+                <div class="card-block">
+                    <p>These are the crafting stations found in houses throughout Black Desert Online.</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-secondary" href="{% url 'crafting:stations:list' %}" role="button">See List &raquo;</a>
+                </div>
+            </div>
         </div>
-        <div class="col">
-            <h2>Recipes</h2>
-            <p>These are not yet implemented. They will eventually be all the recipes for crafting materials and other items.</p>
-            <p><a class="btn btn-secondary" href="{% url 'crafting:recipes:list' %}" role="button">See List &raquo;</a></p>
-       </div>
-        <div class="col">
-            <h2>Stations</h2>
-            <p>These are the crafting stations found in houses throughout Black Desert Online.<p>
-            <p><a class="btn btn-secondary" href="{% url 'crafting:stations:list' %}" role="button">See List &raquo;</a></p>
-       </div>
     </div>
 </div>
 {% endblock content %}
