--- a/bdo_tools/crafting/templates/crafting/list.html
+++ b/bdo_tools/crafting/templates/crafting/list.html
@@ -7,7 +7,7 @@
     </div>
 
     <table class="table table-hover">
-        <thead class="thead-inverse">
+        <thead class="thead-default">
             <tr>
                 <th>ID</th>
                 {% block table-headers %}{% endblock %}
