--- a/bdo_tools/nodes/templates/nodes/main.html
+++ b/bdo_tools/nodes/templates/nodes/main.html
@@ -35,7 +35,7 @@
                     <p>Nodes are the primary locations through Black Desert Online. They are connected to other Nodes and typically contain Resources and/or Properties.<p>
                 </div>
                 <div class="card-footer">
-                    <a class="btn btn-secondary" href="{% url 'nodes:main' %}" role="button">See List &raquo;</a>
+                    <a class="btn btn-secondary" href="{% url 'nodes:nodes:list' %}" role="button">See List &raquo;</a>
                 </div>
            </div>
         </div>
