--- a/bdo_tools/crafting/templates/crafting/material_detail.html
+++ b/bdo_tools/crafting/templates/crafting/material_detail.html
@@ -4,6 +4,36 @@
 {{ object.name }}
 {% endblock %}
 
+{% block details %}
+<div class="card-deck mb-3">
+    <div class="card">
+        <h4 class="card-header">Nodes</h4>
+        <div class="card-block">
+            <table class="table table-hover">
+                <thead class="thead-default">
+                    <tr>
+                        <th>Name</th>
+                        <th>Territory</th>
+                        <th>Kingdom</th>
+                        <th>Resource Cost</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for resource in object.resources.all %}
+                    <tr onclick="window.location.assign('{% url 'nodes:nodes:detail' pk=resource.node.id %}')">
+                        <td>{{ resource.node.name }}</td>
+                        <td>{{ resource.node.territory.name }}</td>
+                        <td>{{ resource.node.territory.kingdom.name }}</td>
+                        <td>{{ resource.cost }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+{% endblock details %}
+
 {% block list-url %}
 {% url 'crafting:materials:list' %}
 {% endblock %}
