Add Property Pages
Fix some margin/padding issues
Update kingdom detail page to use cards
Add property urls
Add property pages
Add property table to station detail page
Make all single references (e.g. Kingdom) links

--- a/bdo_tools/crafting/templates/crafting/detail.html
+++ b/bdo_tools/crafting/templates/crafting/detail.html
@@ -8,7 +8,7 @@
     {% block details %}
     {% endblock %}
     <hr>
-    <p><a class="btn btn-secondary" role="button" href="{% block list-url %}{% endblock %}">
+    <p class="pb-3"><a class="btn btn-secondary" role="button" href="{% block list-url %}{% endblock %}">
         &laquo; Back to List
     </a></p>
 </div>
