--- a/bdo_tools/nodes/templates/nodes/territory_detail.html
+++ b/bdo_tools/nodes/templates/nodes/territory_detail.html
@@ -16,11 +16,11 @@
         </div>
     </div>
 </div>
-<div class="card-deck mb3">
+<div class="card-deck mb-3">
     <div class="card">
     <h4 class="card-header">Nodes in {{ object.name }}</h4>
     <div class="card-block">
-    <table class="table table-hover">
+    <table class="table table-hover mb-0">
         <thead class="thead-default">
             <tr>
                 <th>Node Name</th>
