--- a/bdo_tools/crafting/templates/crafting/material_detail.html
+++ b/bdo_tools/crafting/templates/crafting/material_detail.html
@@ -7,9 +7,9 @@
 {% block details %}
 <div class="card-deck mb-3">
     <div class="card">
-        <h4 class="card-header">Nodes</h4>
+        <h4 class="card-header">Nodes with {{ object.name }}</h4>
         <div class="card-block">
-            <table class="table table-hover">
+            <table class="table table-hover mb-0">
                 <thead class="thead-default">
                     <tr>
                         <th>Name</th>
