--- a/bdo_tools/nodes/templates/nodes/detail.html
+++ b/bdo_tools/nodes/templates/nodes/detail.html
@@ -8,7 +8,7 @@
     {% block details %}
     {% endblock %}
     <hr>
-    <p><a class="btn btn-secondary" role="button" href="{% block list-url %}{% endblock %}">
+    <p class="pb-3"><a class="btn btn-secondary" role="button" href="{% block list-url %}{% endblock %}">
         &laquo; Back to List
     </a></p>
 </div>
