--- a/bdo_tools/static/css/base.css
+++ b/bdo_tools/static/css/base.css
@@ -17,3 +17,7 @@ body {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
+.footer p {
+    margin-bottom: 0px;
+}
